--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docs": "jsdoc src/utilities -r -d src/docs-output"
   },
   "dependencies": {
     "jsdoc": "^4.0.5",
