--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "docs": "jsdoc src/utilities -r -d src/docs-output"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "jsdoc": "^4.0.5",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
